# hivebot

./: .env.template  .gitignore  README.md  app.py  bot.py  flake.nix  heyzecBot.py  heyzecBot.service  main.py  pyproject.toml
alive/: main.py
bots/: food.py  userinfo.py  uwu.py  uwuify.py
bots/alive/: .env.template  __init__.py
hello/: main.py
heyzec_bot/: app.py  host_bot.py  root_handler.py  tenant_bot.py
hivebot/: app.py  mocks.py  old.py  root_handler.py
info/: main.py
loaded/: alive  uwuify
tests/: conftest.py  test_simple.py  test_switch.py
tests/helpers/: bot_fixtures.py
uwuify/: main.py
